Fix alignment and add flex-wrap
Flex wrap is needed to keep the sidebar from taking-over the page. Also, enclosed is the change that centers the text for the header.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -15,7 +15,7 @@ body {
   font-weight:bold;
   display:flex;
   justify-content:flex-start;
-  padding:8px;
+  align-items:center;
 
 }
 
@@ -46,6 +46,7 @@ body {
   box-sizing: border-box;
   display: flex;
   flex:1;
+  flex-wrap: wrap;
 }
 
 .c {
